deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-grpc-gateway
spec:
  selector:
    matchLabels:
      app: kube-grpc-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-grpc-gateway
    spec:
      containers:
        - name: kube-grpc-gateway
          image: "jaronnie/kube-grpc-gateway:v2"
          ports:
          - name: http
            containerPort: 9603
          - name: grpc
            containerPort: 8090
